# to-do

./: .gitignore  DEPLOYMENT.md  DOCUMENT_LIBRARY_IMPLEMENTATION.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  LOGGING_GUIDE.md  MOBILE_DEVELOPMENT_PLAN.md  PLAN_SUMMARY.md  README.md  UV_SETUP.md  activate_env.sh  deploy_to_production.sh  docker-compose.yml  nginx.conf  pyproject.toml  setup.py  start_dev.sh
.claude/: settings.local.json
accounts/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_user_is_email_verified_alter_user_avatar_and_more.py  0003_user_is_premium_user_premium_expires_at_user_role.py
api/: pagination.py  permissions.py  urls.py
api/v1/: urls.py
calendar_app/migrations/: 0001_initial.py
config/: __init__.py  asgi.py  celery.py  exceptions.py  logging_utils.py  urls.py  wsgi.py
config/middleware/: error_handler.py
config/settings/: base.py  local.py  logging.py  production.py
core/: models.py  utils.py  views.py
deployment/: .env.template  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  RESPONSIVE_UPDATE.md  SSL_CONFIGURATION.md  deploy.sh  deploy_manual.sh  gunicorn.service  nginx.conf  nginx_domain.conf  setup_ssh.sh
documents/: admin.py  api_urls.py  api_views.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
documents/migrations/: 0001_initial.py  0002_add_folder_nesting.py
documents/utils/: __init__.py  compression.py  file_handler.py
evernote_clone/: asgi.py  settings.py  urls.py  wsgi.py
notes/: admin.py  forms.py  models.py  urls.py  views.py
notes/migrations/: 0001_initial.py  0002_todo.py  (+2 more)
requirements/: api.txt  base.txt  local.txt  production.txt
scripts/: deploy.sh  dev_setup.sh  startup.sh
templates/: base.html
vault/: admin.py  context_processors.py  crypto.py  forms.py  models.py  session.py  urls.py  views.py
(+112 files in other folders)
