[project]
name = "evernote-clone"
version = "1.0.0"
description = "A production-ready Django application that replicates core Evernote functionality"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "Django>=5.2.6",
    "psycopg2-binary>=2.9.9",
    "Pillow>=10.4.0",
    "django-crispy-forms>=2.3",
    "crispy-bootstrap5>=2024.2",
    "django-taggit>=5.0.1",
    "whitenoise>=6.8.1",
    "python-decouple>=3.8",
    "bleach>=6.1.0",
    "markdown>=3.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.4.6",
    "factory-boy>=3.3.1",
    "pytest-django>=4.9.0",
    "pytest-cov>=5.0.0",
]
prod = [
    "gunicorn>=23.0.0",
    "redis>=5.1.1",
    "sentry-sdk[django]>=2.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = "."
omit = [
    "*/venv/*",
    "*/migrations/*",
    "manage.py",
    "*/settings/*",
    "*/tests/*",
    "*/test_*",
]









